force-app/main/default/objects/TestScenario__c/TestScenario__c.object-meta.xml
<CustomObject>
    <label>Test Scenario</label>
    <nameField>
        <label>Test Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>