force-app/main/default/objects/TestScenario__c/fields/CaseDone__c.field-meta.xml
<CustomField>
    <fullName>CaseDone__c</fullName>
    <label>Case Done</label>
    <summaryFilterItems>
        <field>TestCase__c.CaseStatus__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>