force-app/main/default/objects/TestScenario__c/fields/DefectCount__c.field-meta.xml
<CustomField>
    <fullName>DefectCount__c</fullName>
    <label>Defect Count</label>
    <summarizedField>TestCase__c.TestDefectCount__c</summarizedField>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>