force-app/main/default/objects/TestScenario__c/fields/MProject__c.field-meta.xml
<CustomField>
    <fullName>MProject__c</fullName>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>TestScenarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>