force-app/main/default/objects/TestScenario__c/fields/NumOfTotalTestCase__c.field-meta.xml
<CustomField>
    <fullName>NumOfTotalTestCase__c</fullName>
    <label>Total Test Case</label>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>