force-app/main/default/objects/TestScenario__c/fields/POConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>POConfirmDate__c</fullName>
    <label>PO Confirm Date</label>
    <type>Date</type>
</CustomField>