force-app/main/default/objects/TestScenario__c/fields/ProductOwnerConfirm__c.field-meta.xml
<CustomField>
    <fullName>ProductOwnerConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Owner Confirm</label>
    <type>Checkbox</type>
</CustomField>