force-app/main/default/objects/TestScenario__c/fields/ResolveCount__c.field-meta.xml
<CustomField>
    <fullName>ResolveCount__c</fullName>
    <label>Resolve Count</label>
    <summarizedField>TestCase__c.TestDefectResolveCount__c</summarizedField>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>