force-app/main/default/objects/TestScenario__c/fields/TestCaseFailCount__c.field-meta.xml
<CustomField>
    <fullName>TestCaseFailCount__c</fullName>
    <label>Test Case Fail Count</label>
    <summarizedField>TestCase__c.FailCount__c</summarizedField>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>