force-app/main/default/objects/TestScenario__c/fields/TestCasePassCount__c.field-meta.xml
<CustomField>
    <fullName>TestCasePassCount__c</fullName>
    <label>Test Case Pass Count</label>
    <summarizedField>TestCase__c.PassCount__c</summarizedField>
    <summaryForeignKey>TestCase__c.TestScenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>